[package]
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
categories = ["api-bindings"]
description = "Rust SDK for Selectel Managed Kubernetes Service."
edition = "2018"
homepage = "https://github.com/ozerovandrei/mks-rust"
keywords = ["api", "cloud", "selectel", "mks", "kubernetes"]
license = "MIT"
name = "mks"
repository = "https://github.com/ozerovandrei/mks-rust.git"
version = "0.1.0"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
http = "^0.2"
hyper = "^0.13"
hyper-rustls = { version = "^0.21", optional = true }
hyper-tls = { version = "^0.4", optional = true }
native-tls = { version = "^0.2", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["full"] }
url = "^2"

[lib]
name = "mks"
path = "src/lib.rs"