[package]
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
categories = ["api-bindings"]
description = "Rust SDK for the Selectel Managed Kubernetes Service."
readme = "README.md"
edition = "2018"
homepage = "https://github.com/ozerovandrei/selectel-mks-rust"
keywords = ["api", "sdk", "selectel", "mks", "kubernetes"]
license = "MIT OR Apache-2.0"
name = "selectel-mks"
repository = "https://github.com/ozerovandrei/selectel-mks-rust.git"
version = "0.1.0"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
hyper = "^0.13"
hyper-rustls = { version = "^0.21", optional = true }
hyper-tls = { version = "^0.4", optional = true }
native-tls = { version = "^0.2", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["full"] }
url = "^2"
